[package]
name = "connekt"
version = "0.1.0"
authors = ["Kevin C. Zimmerman <kevinczimmerman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.6"
